# abx-plugins

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  TODO.md  conftest.py  pyproject.toml
.github/: ci_test_matrix.py  ci_test_shards.py
.github/actions/verify-chromium-launch/: action.yml
.github/configs/: ci-tooling.json
.github/workflows/: claude.yml  pages.yml  release.yml  test-parallel.yml
abx_plugins/: __init__.py  pytest_bootstrap.py
abx_plugins/plugins/: .coverage  __init__.py  path_utils.py
abx_plugins/plugins/accessibility/: config.json  on_Snapshot__39_accessibility.js
abx_plugins/plugins/apt/: config.json  on_BinaryRequest__13_apt.py  on_Binary__13_apt_install.py
abx_plugins/plugins/archivedotorg/: config.json  on_Snapshot__08_archivedotorg.bg.py  on_Snapshot__08_archivedotorg.finite.bg.py
abx_plugins/plugins/archivewebpage/: awp_internal.js  config.json  on_Snapshot__16_archivewebpage_start.js  on_Snapshot__65_archivewebpage_stop.js  replay_preview.py
abx_plugins/plugins/base/: config.json  test_utils.py  testing.py  url_cleaning.py  utils.js  utils.py
abx_plugins/plugins/bash/: config.json  on_BinaryRequest__14_bash.py
abx_plugins/plugins/brew/: config.json  on_BinaryRequest__12_brew.py  on_Binary__12_brew_install.py
abx_plugins/plugins/cargo/: config.json  on_BinaryRequest__12_cargo.py  on_Binary__12_cargo_install.py
abx_plugins/plugins/chrome/: README.md  chrome_utils.js  config.json  extract_cookies.js  on_CrawlSetup__89_chrome_kill_zombies.js  on_CrawlSetup__90_chrome_launch.daemon.bg.js  on_CrawlSetup__91_chrome_wait.js  on_Crawl__70_chrome_install.bg.py  on_Crawl__70_chrome_install.finite.bg.py  on_Crawl__70_chrome_install.py  on_Crawl__90_chrome_launch.bg.js  on_Crawl__90_chrome_launch.daemon.bg.js  on_Crawl__91_chrome_wait.js  on_Install__70_chrome.finite.bg.py  on_Snapshot__09_chrome_launch.daemon.bg.js  on_Snapshot__10_chrome_tab.bg.js  on_Snapshot__10_chrome_tab.daemon.bg.js  on_Snapshot__11_chrome_wait.js  on_Snapshot__30_chrome_navigate.js
abx_plugins/plugins/chrome_mhtml/: config.json  on_Snapshot__54_chrome_mhtml.js
abx_plugins/plugins/chrome_screencast/: config.json  on_CrawlSetup__92_chrome_screencast.daemon.bg.js  on_Snapshot__12_chrome_screencast.daemon.bg.js
abx_plugins/plugins/chromewebstore/: config.json  on_BinaryRequest__90_chromewebstore.py
abx_plugins/plugins/claudechrome/: README.md  config.json  on_CrawlSetup__96_claudechrome_config.js  on_Crawl__84_claudechrome_install.finite.bg.js  on_Crawl__84_claudechrome_install.js  on_Crawl__96_claudechrome_config.js  on_Snapshot__47_claudechrome.js
abx_plugins/plugins/claudecode/: README.md  claudecode_utils.py  config.json  on_Crawl__35_claudecode_install.bg.py  on_Crawl__35_claudecode_install.finite.bg.py  on_Install__35_claudecode.finite.bg.py
abx_plugins/plugins/claudecodecleanup/: README.md  cleanup_utils.py  config.json  on_Snapshot__92_claudecodecleanup.py  on_Snapshot__99_claudecodecleanup.py
abx_plugins/plugins/claudecodeextract/: README.md  config.json  on_Snapshot__58_claudecodeextract.py
abx_plugins/plugins/consolelog/: config.json  on_Snapshot__21_consolelog.bg.js  on_Snapshot__21_consolelog.daemon.bg.js
abx_plugins/plugins/custom/: config.json  on_BinaryRequest__14_custom.py  on_Binary__14_custom_install.py
abx_plugins/plugins/defuddle/: config.json  on_Crawl__41_defuddle_install.bg.py  on_Crawl__41_defuddle_install.finite.bg.py  on_Crawl__41_defuddle_install.py  on_Install__41_defuddle.finite.bg.py  on_Snapshot__57_defuddle.py
abx_plugins/plugins/dns/: config.json  on_Snapshot__22_dns.bg.js  on_Snapshot__22_dns.daemon.bg.js
abx_plugins/plugins/dom/: config.json  on_Snapshot__53_dom.js
abx_plugins/plugins/env/: config.json  on_BinaryRequest__00_env.py  on_Binary__00_env_discover.py  on_Binary__09_env_discover.py  on_Binary__15_env_discover.py  on_Binary__15_env_install.py
abx_plugins/plugins/favicon/: config.json  on_Snapshot__11_favicon.bg.py  on_Snapshot__11_favicon.finite.bg.py
abx_plugins/plugins/forumdl/: config.json  forum-dl-wrapper.py  on_Crawl__25_forumdl_install.bg.py  on_Crawl__25_forumdl_install.finite.bg.py  on_Crawl__25_forumdl_install.py  on_Install__25_forumdl.finite.bg.py  on_Snapshot__04_forumdl.bg.py  on_Snapshot__04_forumdl.finite.bg.py
abx_plugins/plugins/gallerydl/: config.json  on_Crawl__20_gallerydl_install.bg.py  on_Crawl__20_gallerydl_install.finite.bg.py  on_Crawl__20_gallerydl_install.py  on_Install__20_gallerydl.finite.bg.py  on_Snapshot__03_gallerydl.bg.py  on_Snapshot__03_gallerydl.finite.bg.py
abx_plugins/plugins/git/: config.json  on_Crawl__05_git_install.bg.py  on_Crawl__05_git_install.finite.bg.py  on_Crawl__05_git_install.py  on_Install__05_git.finite.bg.py  on_Snapshot__05_git.bg.py  on_Snapshot__05_git.finite.bg.py
abx_plugins/plugins/hashes/: config.json  on_Snapshot__93_hashes.py
abx_plugins/plugins/headers/: config.json  on_Snapshot__27_headers.bg.js  on_Snapshot__27_headers.daemon.bg.js
abx_plugins/plugins/htmltotext/: config.json  on_Snapshot__58_htmltotext.py
abx_plugins/plugins/infiniscroll/: config.json  on_Snapshot__45_infiniscroll.js
abx_plugins/plugins/istilldontcareaboutcookies/: config.json  on_Crawl__81_install_istilldontcareaboutcookies_extension.finite.bg.js  on_Crawl__81_install_istilldontcareaboutcookies_extension.js  on_Install__81_istilldontcareaboutcookies_extension.js  on_Snapshot__13_istilldontcareaboutcookies.daemon.bg.js
docs/: generate.py  index.html  index.html.j2
docs/css/: base.css  components.css  tokens.css
skills/abx-plugins/: SKILL.md
tests/: test_archivewebpage_replay_preview.py  test_binary_event_boundaries.py  test_chrome_abxbus_dependency.py  test_chrome_runtime_fixture.py  test_cookie_helpers.py  test_daemon_readiness_contract.py  test_dependency_boundaries.py  test_extra_context_helpers.py  test_js_node_module_resolution.py  test_plugin_config_metadata.py  test_plugin_executables_have_shebang.py  test_runtime_path_isolation.py  test_singlefile_extension_save.py  test_staticfile_skip_helpers.py
(+275 files in other folders)
