[project]
name = "abx-plugins"
version = "1.10.10"
description = "ArchiveBox-compatible plugin suite (hooks, configs, binaries manifests)"
authors = [{name = "Nick Sweeting"}, {name = "ArchiveBox"}]
requires-python = ">=3.11"
license = {text = "MIT"}
readme = "README.md"
keywords = ["archivebox", "plugins", "web-archiving", "hooks", "scraping"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Environment :: Console",
]
dependencies = [
    "abxbus>=2.4.2",
    "abx-pkg>=1.9.14",
    "feedparser>=6.0.0",
    "pydantic-settings>=2.0.0",
    "rich-click>=1.9.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-httpserver>=1.1.0",
    "requests>=2.28.0",
    "jinja2>=3.1.0",
    "pyright>=1.1.408",
    "ty>=0.0.18",
    "ruff>=0.15.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["abx_plugins/**", "README.md", "LICENSE", "pyproject.toml", "**/*.py"]

[tool.hatch.build.targets.sdist]
include = ["abx_plugins/**", "README.md", "LICENSE", "pyproject.toml", "**/*.py"]

[project.urls]
Homepage = "https://github.com/ArchiveBox/abx-plugins"
Source = "https://github.com/ArchiveBox/abx-plugins"
Documentation = "https://github.com/ArchiveBox/ArchiveBox"
"Bug Tracker" = "https://github.com/ArchiveBox/abx-plugins/issues"

[tool.pytest.ini_options]
testpaths = ["abx_plugins/plugins", "tests"]

[tool.codespell]
ignore-words-list = "abx,bu,wit,dont,cant,wont,re-use,re-used,re-using,re-usable,thats,doesnt,fith,FitH,doubleclick,administrar"
skip = "*.json"

[dependency-groups]
dev = [
    "prek>=0.3.6",
]
