[project]
name = "abx-plugins"
version = "1.11.278"
description = "ArchiveBox-compatible plugin suite (hooks, configs, binaries manifests)"
authors = [{name = "Nick Sweeting"}, {name = "ArchiveBox"}]
requires-python = ">=3.12"
license = {text = "MIT"}
readme = "README.md"
keywords = ["archivebox", "plugins", "web-archiving", "hooks", "scraping"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Environment :: Console",
]
dependencies = [
    "abxbus==2.5.10",
    "abxpkg>=1.11.247",
    "httpx>=0.28.1",
    "imagesize>=2.0.0",
    "jambo>=0.1.7",
    "rich-click>=1.9.7",
    "uv>=0.8.22",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3,<9",  # pytest-codeblocks 0.17.0 still uses the pre-pytest-9 collect hook signature.
    "pytest-codeblocks>=0.17.0",
    "pytest-github-actions-annotate-failures>=0.4.0",
    "pytest-httpserver>=1.1.0",
    "pytest-sugar>=1.0.0",
    "pytest-timeout>=2.3.1",
    "feedparser>=6.0.0",
    "django>=6.0",
    "requests>=2.28.0",
    "jinja2>=3.1.0",
    "prek>=0.3.6",
    "pyright>=1.1.408",
    "ty>=0.0.18",
    "ruff>=0.15.2",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["abx_plugins/**", "README.md", "LICENSE", "pyproject.toml"]
exclude = [
    "**/.coverage",
    "**/__pycache__/**",
    "**/*.pyc",
    "**/*.pyo",
    "abx_plugins/plugins/**/README.md",
    "**/tests/**",
    "tests/**",
    "docs/**",
]

[tool.hatch.build.targets.sdist]
include = ["abx_plugins/**", "README.md", "LICENSE", "pyproject.toml"]
exclude = [
    "**/.coverage",
    "**/__pycache__/**",
    "**/*.pyc",
    "**/*.pyo",
    "abx_plugins/plugins/**/README.md",
    "**/tests/**",
    "tests/**",
    "docs/**",
]

[project.urls]
Homepage = "https://github.com/ArchiveBox/abx-plugins"
Source = "https://github.com/ArchiveBox/abx-plugins"
Documentation = "https://github.com/ArchiveBox/ArchiveBox"
"Bug Tracker" = "https://github.com/ArchiveBox/abx-plugins/issues"

[tool.pytest.ini_options]
testpaths = ["abx_plugins/plugins", "tests", "README.md", "AGENTS.md", "skills", "docs"]
addopts = ["-p", "abx_plugins.pytest_bootstrap", "-p", "no:cacheprovider", "--codeblocks"]
timeout = 600
timeout_method = "thread"

[tool.uv]
exclude-newer = "5 days"
exclude-newer-package = { abxpkg = "2100-01-01T00:00:00Z", abxbus = "1 second", abx-plugins = "2100-01-01T00:00:00Z" }

[tool.pyright]
include = [
    "abx_plugins",
    "tests",
]
extraPaths = [
    "abxpkg",
    "../abxpkg",
]
exclude = [
    ".venv",
    "**/*.pyi",
    "**/node_modules",
    "**/__pycache__",
]
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.12"
pythonPlatform = "Linux"

[tool.codespell]
ignore-words-list = "abx,bu,wit,dont,cant,wont,re-use,re-used,re-using,re-usable,thats,doesnt,fith,FitH,doubleclick,administrar,te"
skip = "*.json"
